# doc/swagger-output.json
@@ -51,13 +51,13 @@
             "schema": {
               "type": "object",
               "properties": {
-                "error": {
-                  "type": "boolean",
-                  "example": false
-                },
-                "message": {
+                "accessToken": {
                   "type": "string",
-                  "example": "SUCCESS_SIGN_UP"
+                  "example": "accessToken"
+                },
+                "refreshToken": {
+                  "type": "string",
+                  "example": "refreshToken"
                 }
               },
               "xml": {
