# src/api/sign/post__sign_up.ts
@@ -3,6 +3,12 @@ import bcrypt from "bcrypt";
 import { Request, Response } from "express";
 import prisma from "../../prisma";
 import { CustomSession } from "../../../interface";
+import {
+  generateAccessToken,
+  generateRefreshToken,
+  verifyRefreshToken,
+} from "../../utiles/jwt";
+import { JwtPayload } from "jsonwebtoken";
 const post__sign_up = async (req: Request, res: Response) => {
   const { email, password, nickname = "test", googleFlag = false } = req.body;
   let session: CustomSession = req.session;
@@ -30,7 +36,7 @@ const post__sign_up = async (req: Request, res: Response) => {
     const hash = bcrypt.hashSync(password, 7);
 
     //db저장
-    await prisma.user.create({
+    const user = await prisma.user.create({
       data: {
         email: email,
         password: hash,
@@ -38,10 +44,28 @@ const post__sign_up = async (req: Request, res: Response) => {
         googleflag: googleFlag,
       },
     });
+    const accessToken = generateAccessToken(email, user.id);
+    const refreshToken = generateRefreshToken(user.email, user.id);
+    const verifiedRefreshToken = verifyRefreshToken(refreshToken) as JwtPayload;
+    if (!verifiedRefreshToken || !verifiedRefreshToken.exp) {
+      return res
+        .status(500)
+        .json({ error: true, message: "Internal Server Error" });
+    }
+
+    await prisma.userExtra.update({
+      where: { userId: user.id },
+      data: {
+        refreshToken: refreshToken,
+      },
+    });
 
     return res.status(200).json({
       error: false,
-      message: "SUCCESS SIGN_UP",
+      data: {
+        accessToken: accessToken,
+        refreshToken: refreshToken,
+      },
     });
   } catch (e) {
     console.log(e);
